--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>校园光纤</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme="network-connect"/>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
